# call-of-duty-stats-checker

./: manage.py  pyproject.toml
cod_stats_app/: admin.py  apps.py  models.py
cod_stats_project/: asgi.py  settings.py  urls.py  wsgi.py
