[tool.poetry]
name = "cod-stats"
version = "0.1.0"
description = "Call of Duty Stat retriever"
authors = ["Jordan Kubista <jkube29@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
"callofduty.py" = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
